fix(style): some images not stretched on mobile devices

--- a/_app/assets/themes/curtana/_less/app.less
+++ b/_app/assets/themes/curtana/_less/app.less
@@ -401,7 +401,7 @@ body:hover .latest {
 
   p:not(.browser) {
 
-    > img, > video, > iframe {
+    img, video, iframe {
 
       @media (max-width: @breakpoint-md) {
         margin-left: -@padding-md;
